<resources>
    <string name="app_name">CalendarAndroid</string>


    <string name="btn_signup">Sign Up</string>

    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="wrong_event_name">cannot find corresponding event name</string>
    <string name="correct_event_name">find the corresponding event name</string>
    <string name="back_to_cal">Back to Calendar</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="enter_date">Today</string>
    <string name="create_account">Create Account</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="placeholder">Placeholder</string>
    <string name="no_events">There are no events today</string>
    <string name="wrong_time">Entered wrong time</string>
    <string name="wrong_tag">Cannot find the corresponding tag</string>
    <string name="wrong_alert">Cannot find the corresponding alert</string>
    <string name="wrong_memo">Cannot find the corresponding memo</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="wrong_linked">Cannot find the corresponding linked name</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">k7lRhg0GOaqpN3FyIJNA77NWb5nR8b6h862m5QfS</string>
    <string name="back4app_client_key">QHlm5gbtF80T95IcaKKbzYtotftQyfMp19uVGdhp</string>
    <string name="shareEvent">SHARE</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="event_title">Title</string>
    <string name="event_reminder">Reminders</string>
    <string name="event_repeat">Repeat</string>
    <string name="event_location">Location</string>
    <string name="notes">Event Notes</string>
    <string name="event_invite">Invite</string>
    <string name="event_add_alert">Add</string>
    <string name="event_tags">Add some tags</string>
    <string name="nav_drawer_open">open</string>
    <string name="nav_drawer_close">close</string>

    <string name="alert_at_time">At time of event</string>
    <string name="alert_10_mins">10 minutes before</string>
    <string name="alert_30_mins">30 minutes before</string>
    <string name="alert_hour_before">1 hour before</string>
    <string name="alert_day_before">1 day before</string>
    <string name="alert_custom">Custom</string>

    <string name="alert_r_day">Every Day until the event</string>
    <string name="alert_r_week">Every Week Until the event</string>
    <string name="alert_r_month">Every Month until the event</string>

    <string name="event_r_never">Never</string>
    <string name="event_r_daily">Daily</string>
    <string name="event_r_weekly">Weekly</string>
    <string name="event_r_monthly">Monthly</string>
    <string name="event_r_yearly">Yearly</string>

    <string name="alert_days">Every day until the event</string>
    <string name="alert_weeks">Every</string>
    <string name="action_logout">Logout</string>
    <string-array name="alert_rep_menu">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>

    <string-array name="alert_ind_menu">
        <item>minute</item>
        <item>hour</item>
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>

    <string-array name="event_rep_menu">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>



</resources>
