<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F2F6"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radio_group_corners"
        android:bottomRightRadius="10dp"
        android:divider="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/event_r_never"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/event_r_never"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/event_r_daily"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/event_r_daily"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/event_r_weekly"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/event_r_weekly"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/event_r_monthly"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/event_r_monthly"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/event_r_yearly"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/event_r_yearly"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/event_r_custom"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="openCustomDialog"
            android:text="@string/alert_custom"
            android:textSize="18sp">


        </RadioButton>

    </RadioGroup>

    <RelativeLayout
        android:id="@+id/rl_duration_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/radio_group_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <LinearLayout
            android:id="@+id/event_rep_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:clickable="false"
                android:text="Duration"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_duration_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:clickable="false"
                android:text="ee"
                android:textSize="14sp" />

        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>