<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
    android:layout_width="match_parent">
    
<LinearLayout 
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:textSize="32sp">
    </EditText>

    <RelativeLayout
        android:id="@+id/info_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_event_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:clickable="false"
            android:text="@string/start">

        </TextView>

        <TextView
            android:id="@+id/tv_event_start_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:clickable="false"
            android:text="test">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_event_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:clickable="false"
            android:text="@string/end">

        </TextView>

        <TextView
            android:id="@+id/tv_event_end_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:clickable="false"
            android:text="test">

        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="repEvent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_repeat"
            android:textSize="24sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="every hour"
            android:textSize="14sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_reminder"
                android:textSize="24sp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="24dp"
                android:layout_centerVertical="true"></TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:onClick="selectAlert"
                android:text="@string/event_add_alert">


            </Button>

        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <EditText
        android:id="@+id/event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_location">

    </EditText>

    <EditText
        android:id="@+id/event_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_tags">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_invite"
                android:textSize="24sp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="24dp"
                android:layout_centerVertical="true"
                >

            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24sp"
                android:text="@string/event_add_alert"
                >

            </Button>

        </RelativeLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/invitees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>
</ScrollView>